refactor: enforce architecture boundaries — ai, content, and ingestion modules
- Introduce LlmCallLogger port (ai-owned) so LlmClient no longer imports ingestion
- LlmCallLoggingService implements LlmCallLogger (ingestion-owned adapter)
- Add EmbeddingFailure (ai-owned) carried by EmbeddingGenerationException; PipelineStageSupport translates to IngestionFailure
- Move TriadAnalysisModels from ingestion.application.result → ingestion.domain.triad
- Extract TemporalEdgeWriteRequest + TemporalEdgeProvenance (content-owned) and TriadTemporalEdgeRequestFactory (ingestion mapper) so SceneTemporalRelationshipPersistenceService no longer imports ingestion
- Decorate async executors with MDC propagation in AsyncConfig; scope @Async annotations to named executors in SceneDetectionHandler and EmbeddingHandler
- Move LLM-call persistence outside the retry body in LlmClient via persistLlmCallSafely
- All architecture tests pass (CorePackageBoundary + ModulithBoundary); full test suite green (338 tests)